--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/build": "^20.0.0",
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
+    "angular-cli-ghpages": "^2.0.3",
     "typescript": "^5.8.2"
   }
 }
