--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "deploy": "ng build --base-href=/CalcColasElGalgo/ && npx angular-cli-ghpages --dir=dist/demo"
   },
   "dependencies": {
     "@angular/animations": "^20.0.0",
