--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "ng build --base-href=/CalcColasElGalgo/ && npx angular-cli-ghpages --dir=dist/demo"
+    "deploy": "ng build --base-href=/CalcColasElGalgo/ && npx angular-cli-ghpages --dir=dist/demo/browser"
   },
   "dependencies": {
     "@angular/animations": "^20.0.0",
